--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
+<!-- Here is a typical HTML boilerplate. VS code will prefill your HTML document by typing ! and pressing enter/return -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Don't forget to link your stylesheet to your HTML document -->
     <link rel="stylesheet" href="style.css">
     <title>DOM MANIPULATION</title>
 </head>
 <body>
     
+    <!-- Below are example parent and child elements that we will be selecting with a 
+         a combination of JavaScript and CSS -->
+
     <div id="main-container">
  
         <h1 id="main-heading">Target by id</h1>
@@ -27,6 +33,12 @@
             <span>Target and Style with querySelectorAll</span>
             <span>Target THIS by nth child</span>
             <span>Target and Style with querySelectorAll</span>
+        </div>
+
+        <button id="add-text-btn">Add Dynamic Text</button>
+
+        <div id="dynamic-text-container">
+
         </div>
 
     </div>
