Adds function that dynamically posts data

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
         </div>
 
+        <div id="dynamic-post-container">
+
+        </div>
+        
     </div>
 
     <script src="script.js"></script>
