Rearranges the button and function examples

--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
             <span>Target and Style with querySelectorAll</span>
         </div>
 
+        <div id="dynamic-post-container">
+        </div>
+
         <button id="add-text-btn">Add Dynamic Text</button>
 
         <div id="dynamic-text-container">
-
         </div>
 
-        <div id="dynamic-post-container">
-
-        </div>
-        
     </div>
 
+    <!-- Don't forget to link your javascript files using the script tag -->
     <script src="script.js"></script>
 </body>
 </html>
